--- a/style.css
+++ b/style.css
@@ -133,4 +133,11 @@ main .container button:active{
         color: #707070;
         font-size: 1.5rem;
     }
+
+@media screen and (max-width: 700px){
+    main{
+        width: 90%;
+    }
+}
+
 }
